--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <title>Lab 5</title>
   </head>
 
+  <script src="app.js"></script>
+
   <body>
     <h1>Lab 5</h1>
 
     <h2>sum()</h2>
-    <p></p>
+    <p><script>
+
+      let Sum = testSum()
+    
+    
+    document.write (Sum) </script></p>
 
     <h2>multiply()</h2>
     <p></p>
